--- a/access/header/css/basse.css
+++ b/access/header/css/basse.css
@@ -3,7 +3,6 @@
     --gold--color :#fcb900;
     --green--color :#c2ecdae0;
     --white-color : #fff;
-    
 }
 
 html{
@@ -12,16 +11,25 @@ html{
     line-height: 1.6;
     width: 100%;
     scroll-behavior: smooth;
-    background-color:rgba(0 , 0, 0 ,0.01 );;
-    
+    background-color:rgba(0 , 0, 0 ,0.01 );
 }
 html::-webkit-scrollbar {
-    font-size: 10px;
-    font-weight: 100;
+    font-size: 10rem ;
+    font-weight: 900;
 }
 
 .open {
-    display: inline-block!important
+    display: inline-flex!important
+}
+
+.body {
+    width: 1200px;
+    max-width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .active {
@@ -47,8 +55,11 @@ html::-webkit-scrollbar {
     max-width: 20%;
     margin-left: 45px;
 }
-
-
 .delete {
     display: none;
+    opacity: 1;
 }
+
+.rotate {
+    transform:  translateX(-35%) translateY(2%) rotate(-90deg);
+  }
