--- a/auth/register/assets/css/base.css
+++ b/auth/register/assets/css/base.css
@@ -1,5 +1,5 @@
 :root {
-    --backgroup-color :#fff;
+    --background-color :#fff;
     --tw-color :#33CCFF;
     --fb-color:#4867aa;
     --gg-color:#db4437;
@@ -7,79 +7,32 @@
     --primary-color:#fab55d;
 }
 
-.left {
-    float: left !important
-}
-
-.all {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-html {
-    /* 10px */
+html{
+    font-family:  Helvetica, Arial, sans-serif;
     font-size: 62.5%;
-    line-height: 1.6rem;
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-}
-.grid {
-    width: 1200px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-.grid__row {
+    line-height: 1.6;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -5px;
-    margin-right: -5px;
-    
+    scroll-behavior: smooth;
 }
 
-
-
-
-.col-4 {
-    position: relative;
-    width: 42.3%;
-    margin: 0 auto;
+a {
+    text-decoration: none;
 }
 
-.col-6 {
-    
-    position: relative;
-    width: 57.7%;
-    margin: 0 auto;
+.register-error {
+    color: red;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 
-/* Responsive */
-@media screen and (max-width : 1023px) {
-    .col-6 {
-        display: none;
-    }
-    .col-4 {
-        width: 100%;
-    }
-<<<<<<< HEAD
-    .sign-up {
-        left: auto;
-    }
-=======
-    
-   
+.login-error
+ {
+    color: red;
+    font-size: 1.4rem;
+    font-weight: 400;
+ }
 
->>>>>>> reset-page
-}
-@media only screen and (max-width: 739px) {
-    .sign-up {
-        background-color: red;
-    }
-}
-    
+
+
+
+
