--- a/modules/profile/css/main.css
+++ b/modules/profile/css/main.css
@@ -1,5 +1,3 @@
-
-
 .container {
     position: relative;
     top: 0;
@@ -8,33 +6,57 @@
     bottom: 0;
     height: auto;
     background-color: white;
-} 
+}
+
 /* col-4 */
 
 .account {
     display: flex;
-    height: 10vh;
+    height: 90px;
     justify-content: center;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-radius: 20px;
-    min-height: 50px;
 }
 
-.account > a {
+.account.account-two {
+    margin-left: 15px;
+    display: none;
+    width: 290px;
+}
+
+.account__name-logo {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.fa-house {
     font-size: 33px;
-    margin-right: 16%;
-    color: rgb(59,183,126)
+    color: rgb(59, 183, 126)
 }
 
 .name-account {
+    height: 30px;
+    overflow: hidden;
+    /* width: 168px; */
+    margin-right: 15px;
     font-size: 1.6rem;
+    /* flex-direction: column; */
+    /* width: 80%; */
+
+    /* font-size: 1.6rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 10px;
     line-height: 2rem;
-    font-weight: 200;
+    font-weight: 200; */
+}
+
+.name-account>p {
+    line-height: 34px;
+    text-transform: capitalize;
 }
 
 .icon-list {
@@ -43,7 +65,7 @@
     width: 10%;
 }
 
-.logo-profile{
+.logo-profile {
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -57,25 +79,23 @@
 }
 
 #list-info {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 15px;
     border: solid 1px #ccc;
-    border-radius: 4px;
+    border-radius: 8.5px;
 }
 
-.list-info__item { 
-    padding: 0 18px;
+.list-info__item {
+    padding: 10px 10px;
     display: flex;
     flex-direction: column;
 }
 
-.list-info__item:not(:last-child) {
-    margin-bottom: 20px;
-}   
 
-.list-info__item:last-child {   
+.list-info__item:last-child {
     margin-bottom: 20px;
 }
 
@@ -98,7 +118,7 @@
 }
 
 .left:first-child {
-    padding-right: 5px ;
+    padding-right: 5px;
 }
 
 .space-item {
@@ -116,8 +136,9 @@
 /* THONG TIN TAI KHOAN */
 .handle-right {
     width: auto;
-    display: none;
+    /* display: none; */
 }
+
 .close {
     color: rgba(0, 0, 0, 0.4);
     font-size: 3rem;
@@ -125,16 +146,16 @@
 }
 
 .information {
-    height: 10vh;
+    height: 83px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 0px 20px 0;
+    padding: 0 auto;
 }
 
 
 .information h1 {
-    margin-top: 30px;
+    margin-top: 0;
     font-weight: 600;
     font-size: 3rem;
 }
@@ -146,12 +167,15 @@
 }
 
 .information-all {
+    margin-top: 22px;
     display: flex;
     border-radius: 10px;
     background-color: white;
-    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 30%);;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 30%);
+    ;
 
 }
+
 /* info left */
 .information-left {
     width: 450px;
@@ -159,7 +183,7 @@
 }
 
 .border-right {
-    border-right: 1px dashed rgba( 0, 0, 0, 0.7);
+    border-right: 1px dashed rgba(0, 0, 0, 0.7);
 }
 
 .info-left {
@@ -177,9 +201,9 @@
 .form-avt {
     font-size: 4rem;
     padding: 20px;
-    border: 4px solid rgb(59,183,126);
+    border: 4px solid rgb(59, 183, 126);
     border-radius: 50%;
-    color: rgb(59,183,126);
+    color: rgb(59, 183, 126);
 }
 
 .form-name-nickname {
@@ -204,6 +228,7 @@
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.3);
 }
+
 .form-nick-name {
     display: flex;
     justify-content: space-between;
@@ -230,7 +255,7 @@
     justify-content: center;
     font-size: 1.6rem;
     padding: 15px;
-    color: rgba( 0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .list-item-right {
@@ -239,10 +264,10 @@
     font-size: 1.4rem;
 }
 
-.update{
+.update {
     text-decoration: none;
-    color: rgb(59,183,126);
-    border: solid 1px rgb(59,183,126)
+    color: rgb(59, 183, 126);
+    border: solid 1px rgb(59, 183, 126)
 }
 
 .phone-email {
@@ -278,7 +303,7 @@
     line-height: 2rem;
 }
 
-.email-address{
+.email-address {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -323,7 +348,7 @@
     padding: 5px 12px;
     border-radius: 4px;
     margin-right: 10px;
-    border: 1px solid rgba( 0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     cursor: pointer;
 
 }
@@ -332,7 +357,7 @@
     padding: 5px 12px;
     border-radius: 4px;
     margin-right: 10px;
-    border: 1px solid rgba( 0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     cursor: pointer;
 
 
@@ -342,7 +367,7 @@
     padding: 5px 12px;
     border-radius: 4px;
     margin-right: 10px;
-    border: 1px solid rgba( 0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     cursor: pointer;
 
 
@@ -354,7 +379,8 @@
 .notification {
     display: none;
 }
-.notice{
+
+.notice {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -382,6 +408,7 @@
 .address {
     display: none;
 }
+
 /* <!--- Thông tin thành toán  --> */
 .billing {
     display: none;
@@ -406,8 +433,80 @@
 .buy-later {
     display: none;
 }
+
 /* <!--- Đánh giá của tôi --> */
 
 .my-review {
     display: none;
+}
+
+.account__name-logo>a {
+    margin: 0 15px 1px 15px;
+}
+
+.row {
+    justify-content: center;
+}
+
+/* .open {
+    display: flex;
+    flex-wrap: wrap;
+} */
+
+#ba {
+    /* height: 85px; */
+    /* position: relative; */
+}
+
+.list {
+    position: relative;
+    font-size: 35px;
+
+}
+
+#list {
+    position: absolute;
+    top: 118%;
+    left: 0;
+    animation: myKeyframes 0.05s;
+    transform-origin: top left;
+    /* transition-duration: 2s; */
+    /* background-color:blue; */
+    /* font-size: 35px; */
+}
+
+@keyframes myKeyframes {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(0)
+    }
+
+}
+
+#two {
+    background-color: white;
+}
+
+.list-info.two {
+    overflow: hidden;
+    border-radius: 8.5px;
+    background-color: white;
+    border: solid 1px;
+}
+
+.list-info.two>li {
+    width: 300px;
+}
+
+.list-info.two > ul {
+    position: relative;
+    top: 26px;
+    right: 60px;
+}
+
+.main {
+    margin-top: 80px;
 }
