--- a/access/header/css/Main.css
+++ b/access/header/css/Main.css
@@ -38,7 +38,7 @@ a{
 
 
 
-
+.header .menu
 /* header */
 .header{
     position: absolute;
@@ -53,10 +53,11 @@ a{
     display: flex;
     height: 60px;
     width: 100%;
+    margin: 0;
     align-items: center;
  }
  .header .menu {
-    padding: 0 15px;
+    padding: -1 10px;
  }
  .header .menu > .menu-item{
     display: inline-block;
@@ -84,6 +85,7 @@ a{
     border-radius: 5px;
     opacity: 1;
     visibility: hidden;
+    z-index: 9999;
  }
 
  @media(min-width: 900px){
@@ -137,7 +139,9 @@ a{
     border-right: 7px solid transparent;
     border-top: 9px solid #504a4a;
     transition: all 0.2s ease;
-    transform: translate(21%,60%)
+    transform: translate(21%,34%);
+    
+    
  }
 
  .header .menu > .menu-item:hover > a .plus::before,
@@ -150,7 +154,7 @@ a{
     border-left: 7px solid transparent;
     border-right: 7px solid transparent;
     border-bottom: 9px solid var(--primary-color);
-    transform: translate(21%,60%);
+    transform: translate(21%,34%);
     transition: all 0.2s ease;
 
  }
@@ -193,6 +197,7 @@ a{
     border-radius: 5px;
     opacity: 0;
     visibility: hidden;
+    z-index: 9999;
  }
 
  @media(min-width: 900px){
@@ -508,7 +513,7 @@ a{
     box-shadow: 0 1px 2px 2px rgba(0,0,0,0.1);
     border-radius: 10px;
     transform: transform linear 1s;
-    margin-left: 28px;
+    margin-left: 35px;
    
 }
 
@@ -706,8 +711,9 @@ a{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-items: start;
     display: none;
+    padding: 50px;
     
 }
 
@@ -719,7 +725,7 @@ a{
 
 .menu-breakfast__1 {
     position: relative;
-    width: 20%;
+    width: 23%;
     display: inline-block;
     flex-direction: column;
     margin-left: 10px;
@@ -1167,7 +1173,7 @@ i.icon-like-fill {
 
 .footer-all{
     position: relative;
-    top: 0;
+    top: 65px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -1266,4 +1272,653 @@ font-weight: 700;
     font-size: 12px;
     color: #4a4a4a;
 
+}
+
+/*tue lam*/
+
+/*icon*/
+#dialog .icon {
+    margin: 40px auto 0;
+    font-size: larger;
+    width: 93px;
+    height: 93px;
+    border: 5px solid rgba(165,220,134,.3);;
+    border-radius: 50%;
+    text-align: center;
+    /* display: inline-block;
+     */
+     /* list-style: 50px; */
+}
+
+#dialog .icon i {
+    color: #a5dc86;
+    font-size: 50px;
+    line-height: 93px;
+}
+
+/*dialog*/
+#Continue_shopping {
+    color: white;
+    background-color: rgb(59,183,126);
+    border: 0;
+    border-radius: 5px;
+    height: 48px;
+    width: 225px;
+    font-size: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+#Continue_shopping:hover {
+    cursor: pointer;
+    background-color: rgb(53,164,113);
+}
+
+
+#checkout {
+    color: white;
+    background-color: rgb(255,186,67);
+    border: 0;
+    border-radius: 5px;
+    font-size: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    width: 152px;
+    height: 48px;
+}
+
+#checkout:hover {
+    cursor: pointer;
+    background-color: rgb(229,167,60);
+}
+
+#added_to_cart {
+    color: #595959;
+    font-size: 31px;
+    margin-top: 28px;
+    text-align: center;
+    width: 100%;
+}
+
+.open-dialog {
+    position: fixed;
+    top: 100px;
+    left: 100px;
+}
+
+#dialog::backdrop {
+    background-color: rgba( 0,0,0,0.4) ;
+
+}
+
+#dialog::backdrop:checked #dialog{
+    display: none;
+}
+
+#dialog {
+    width: 530px;
+    border-radius: 5px;
+    margin: auto;
+    border: 0;
+}
+
+
+dialog[open] {
+    animation: myFadeIn .5s ease;
+  }
+  
+@-webkit-keyframes myFadeIn{
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+/*cart*/
+.cart {
+    transition: all .3s ease;
+    position: fixed;
+    height: 100vh;
+    width: 405px;
+    right: -100%;
+    top: 0;
+    /* background-color: var(--green--color); */
+    background-color: white;
+    border-left: 2px solid rgb(201,238,222);
+    padding: 12px 20px;
+    z-index: 10000;
+    overflow-y: scroll;
+}
+
+.cart button {
+    height: 30px;
+    padding: 0 20px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(24,175,118);
+    color: rgb(201,238,222);
+    margin: 12px 123px;
+}
+
+.cart h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.cart table {
+    width: 100%;
+}
+
+.cart table thead tr th:first-child {
+    text-align: left;
+}
+
+.cart table tbody td {
+    border-bottom: 1px solid #ddd;
+    padding: 12px 0;
+}
+
+.cart table thead tr th:last-child {
+    text-align: right;
+}
+
+.cart table tbody tr td:last-child {
+    text-align: right;
+}
+
+.cart-notice {
+    color: rgb(194,236,218);
+    top: -8px;
+    right: -17px;
+    text-align: center;
+    position: absolute;
+    width: 20px;
+    height: 16px;
+    font-size: 12px;
+    background-color: white;
+    line-height: 16px;
+    border-radius: 10px;
+}
+.nav-menu {
+    margin-left: 190px;
+}
+
+
+/* list menu */
+.list-menu{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.navba-menu-list{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.name-naturally{
+    width: 100%;
+    background: rgba(0 , 0, 0 ,0.01 ); ;
+}
+
+.organic-product{
+
+}
+
+.naturally{
+    margin-top: 40px;
+}
+
+.naturally h1{
+    color: rgba(255, 255, 255, 0);
+    line-height: 187px;
+    -webkit-text-stroke: 1px rgba(76, 217, 100, 0.25);
+    letter-spacing: 0px;
+    font-weight: 600;
+    font-size: 9rem;
+    transform-origin: 50% 50%;
+    opacity: 0.7;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+
+}
+
+.organic{
+    width: 100%;
+    height: 100%;
+    margin-top: -90px;
+    margin-bottom: 60px;
+}
+
+.organic p{
+    display: flex;
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    justify-content: center;
+    font-family: cursive;
+
+}
+
+.organic h3{
+    display: flex;
+    justify-content: center;
+    font-size: 3.5rem;
+}
+
+
+
+.organic-list-iq{
+    position: relative;
+    border-radius: 5px;
+}
+
+
+
+.img-organic img {
+    background-color: #ffffff;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 310px;
+    height: 400px;
+    overflow: visible;
+    border-radius: 5px;
+    transform: scale(1);
+    -webkit-transition: all .4s;
+    -o-transition: all .4s;
+    transition: all .4s;
+    position: absolute;
+
+}
+
+.img-organic:hover img{
+    transform: scale(1.02);
+
+}
+
+.organic-button {
+    position: absolute;
+    display: flex;
+    height: 420px;
+    width: 350px;
+    flex-wrap: wrap;
+}
+
+.organic-button .name-organic{
+    display: flex;
+    height: 65%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+.name-list{
+    position: absolute;
+    top: 70px;
+    left: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: var(--primary-color);
+}
+
+.organic-button .name-organic h1 {
+    font-family: cursive;
+    font-size: 2.5rem;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+}
+
+.organic-button .name-organic h2{
+    font-family: cursive;
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.organic-item:hover span  {
+    position: relative;
+    top: 0px;  
+    display: inline-block;
+    -webkit-animation: organic .5s ease-in-out infinite alternate;
+    font-size: 1.5rem;
+}
+.organic-item i{
+    color: #fff;
+}
+.organic-item:hover i{
+    position: relative;
+    top: 0px;  
+    display: inline-block;
+    -webkit-animation: organic .6s ease-in-out infinite alternate;
+    font-size: 1.5rem;
+}
+.organic-item  i:nth-child(8) {
+    -webkit-animation-delay: 0.7s;
+}
+
+
+.organic-item span:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+}
+.organic-item  span:nth-child(3) {
+    -webkit-animation-delay: 0.2s;
+}
+.organic-item  span:nth-child(4) {
+    -webkit-animation-delay: 0.3s;
+}
+.organic-item  span:nth-child(5) {
+    -webkit-animation-delay: 0.4s;
+}
+.organic-item  span:nth-child(6) {
+    -webkit-animation-delay: 0.5s;
+}
+.organic-item  span:nth-child(7) {
+    -webkit-animation-delay: 0.6s;
+}
+
+
+@-webkit-keyframes organic {
+    100% {
+        top: -5px;
+       
+    }
+}
+
+.organic-item{
+    height: 50px;
+    width: 160px;
+    border-radius: 5px;
+    text-transform: none;
+    border: none;
+    outline: none;
+    background: var(--gold--color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 180px;
+    left: 70px;
+    
+}
+
+.organic-item .shop-organic{
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: -3px;
+    font-size: 1.5rem;
+
+}
+
+.organic-list{
+    margin-right: 8px;
+}
+
+.organic-list_item{
+    margin-right: 10px;
+
+}
+
+
+.organic-item .shop-now{
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: -3px;
+    font-size: 1.5rem;
+
+}
+
+.organic-item:hover{
+    background: var(--primary-color);
+}
+
+.list-menu-item{
+ position: relative;
+ top: 0;
+ right: 0;
+ left: 0;
+ bottom: 0;
+ width: 850px;
+}
+
+
+.list-menu-item .list-nav-memnu ul{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.navba-list-menu{
+    display: flex;
+    width: 400px;
+    height: 120px;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin-right: 23px;
+    margin-bottom: 20px;
+    
+}
+
+.list-menu-img img {
+    width: 110px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 12px;
+    padding-top: 0px;
+}
+
+.list-menu-img:hover img{
+    transform: scale(1.05);
+    transition: all 0.5s;
+
+}
+
+.list-menu-nav{
+    line-height: 30px;
+    margin-left: 30px;
+}
+
+.list-h1{
+    display: flex;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.navba-menu-icon:hover i{
+    color: var(--primary-color);
+    transition: 1s all;
+}
+
+.list-h1:hover{
+   color: var(--primary-color);
+   transition: 0.5s all;
+
+}
+
+.list-money{
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+/* sale-up */
+.sale-food{
+    width: 100%;
+    position: relative;
+    top: 0px;
+}
+
+.sale-up{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.sale-img img{
+    display: flex;
+    justify-content: center;
+    height: 340px;
+    width: 1100px;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    visibility:visible;
+    transform: scale(1);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.sale-up-img {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    transform: scale(1);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    background: transparent;
+    overflow: hidden;
+    visibility: visible;
+}
+
+.sale-img:hover img{
+    width: 1170px;
+    border-radius: 5px;
+    transform: scale(1.03);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+
+}
+
+
+.sale-up-content{
+    position: absolute;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 1200px;
+}
+
+.sale-up-content p{
+    font-size: 1.3rem;
+    font-family: cursive;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+.sale-up-content h1{
+    font-size: 3rem;
+    font-family: inherit;
+    font-weight: 800;
+}
+
+.sale-button{
+    width: 160px;
+    height: 50px;
+    border: none;
+    outline: none;
+    background: var(--gold--color);
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.sale-button:hover{
+    background: var(--primary-color);
+    
+}
+
+.sale-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sale-shop-now{
+    margin-right: 7px;
+}
+
+.sale-up-now{
+    margin-right: 7px;
+
+}
+
+ .shop-iq{
+    letter-spacing: -2px;
+
+}
+
+.now-ip{
+    letter-spacing: -2px;
+
+}
+
+
+.sale-button:hover span  {
+    position: relative;
+    top: 0px;  
+    -webkit-animation: sale .5s ease-in-out infinite alternate;
+    font-size: 1.5rem;
+}
+
+.sale-button i{
+    color: #fff;
+}
+.sale-button:hover i{
+    position: relative;
+    top: 0px;  
+    -webkit-animation: organic .6s ease-in-out infinite alternate;
+    font-size: 1.5rem;
+}
+.sale-button  i:nth-child(8) {
+    -webkit-animation-delay: 0.7s;
+}
+
+
+.sale-button span:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+}
+.sale-button  span:nth-child(3) {
+    -webkit-animation-delay: 0.2s;
+}
+.sale-button  span:nth-child(4) {
+    -webkit-animation-delay: 0.3s;
+}
+.sale-button  span:nth-child(5) {
+    -webkit-animation-delay: 0.4s;
+}
+.sale-button span:nth-child(6) {
+    -webkit-animation-delay: 0.5s;
+}
+.sale-button  span:nth-child(7) {
+    -webkit-animation-delay: 0.6s;
+}
+
+
+@-webkit-keyframes sale {
+    100% {
+        top: -5px;
+       
+    }
 }
