--- a/access/header/css/reponsive.css
+++ b/access/header/css/reponsive.css
@@ -6,6 +6,9 @@
 }
 
 @media screen and (max-width:1199px) and (min-width:46.185em){
+    #aa {
+        display: flex;
+    }
     .menu-breakfast  {
         width: 100%;
         margin: 0;
@@ -35,9 +38,361 @@
     .item-action{
         font-size: 1.2rem;
     }
+    .nav-icon{
+        width: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+
+    .icon-menu{
+        width: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+
+    .logo-food {
+        display: flex;
+        height: 60px;
+        width: 140px;
+        padding: 0 20px;
+        align-items: center;
+    }
+    .logo-food img{
+        width: 100px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .slider-left h1 {
+        font-size: 9rem;
+      
+    }
+
+    .slider__pen h1 {
+        font-size: 5rem;
+        font-weight: 700;
+    }
+
+    .pen__call h1 {
+        font-size: 5rem;
+        font-weight: 700;
+    }
+
+    .header .close-nav-menu > i{
+        display: block;
+    }
+        .header .close-nav-menu > i{
+            height: 5px;   
+            width: 15px;
+            font-size: 3.2rem;
+            color: #fff;
+            padding: 10px 15px;
+        }
+        
+    
+        .header .nav-menu{
+            position: fixed;
+            display: none;
+            width: 500px;
+            height: 605px;
+            top: 0;
+            right: 0;
+            border: 3px solid   var(--primary-color);
+            border-radius: 2px;
+            overflow-y: auto;
+            background-color:#434242;
+            padding: 15px 0;
+            z-index: 99;
+            transition: all 0.5s ease;
+    
+        }
+    
+        .header .menu > .menu-item > .sub-menu{
+                display: none;
+                width: 100%;
+                position: relative;
+                visibility: visible;
+                background-color: transparent;
+                overflow: hidden;
+            }
+    
+        .header .menu > .menu-item > .sub-menu > .menu-item > a{
+            padding: 12px 45px;
+            color: #fff;
+            border-bottom: 1px solid #333;
+        }
+        
+        .header .menu > .menu-item{
+            display: block;
+            width: 100%;
+            margin: 0px;
+        }    
+    
+        .header .menu > .menu-has-children > a{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    
+         .header .menu > .menu-item > a{
+            color: #fff;
+            padding: 12px 15px;
+            border-bottom: 1px solid #333;
+    
+        }
+    
+         .header .menu > .menu-item:first-child > a{
+            border-top: 1px solid #333;
+    
+        }
+    
+        .header .menu > .menu-item > a .plus::before, 
+        .header .menu > .menu-item > a .plus::after{
+            border-top: 7px solid #fff;
+    
+        }
+        .header .menu {
+            padding: -1 10px;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            margin-top: 35px;
+        }
+
+        .header .menu > .menu-item {
+            display: inline-block;
+            margin-left: 0;
+            width: 100%;
+            position: relative;
+        }
+
+        .header .menu > .menu-item > a {
+            font-size: 1rem;
+        
+        }
+
+        .header .menu > .menu-item > a {
+            
+            font-size: 1rem;
+        
+        }
+
+        .slider__display {
+            flex-direction: column;
+        }
+
+        .slider__photo {
+        
+            width: 330px;
+            height: 100%;
+            margin-top: 22px;
+            margin-right: 20px;
+            background: rgb(220 241 228);
+        }
+
+        .slider__img img {
+            border-radius: 100%;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        .slider-left {
+            
+            right: 200px;
+            position: relative;
+            top: 115px;
+        }
+
+        .slider__shop {
+    
+            left: 235px;
+        }
+
+        .logo-img {
+            background-color: #fff;
+            margin-left: 0px;
+        }
+
+        .slider__view {
+            width: 200px;
+            display: flex;
+            padding: 12px 0;
+            margin-top: 30px;
+            margin-left: 40px;
+        
+        }
+
+
+        .slider__img {
+        
+            margin-left: 30px;
+        }
+
+        .comment-one {
+            display: flex;
+            width: 97%;
+            height: 150px;
+        
+        }    
+
+        .row {
+            display: flex;
+            font-size: 1.3rem;
+            padding: 50px 50px 20px 50px;
+            flex-direction: column;
+        }
+
+        .navba-menu-list {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+
+        .food-up {
+            position: relative;
+            width: 30%;
+            height: 200px;
+            margin-left: 10px;
+            margin-right: 10px;
+            overflow: hidden;
+        }
+
+        .list-menu-item {
+            position: relative;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            width: 715px;
+        }
+
+        .sale-img img {
+            display: flex;
+            justify-content: center;
+            height: 340px;
+            width: 700px;
+            -webkit-transition: all .5s;
+            transition: all .5s;
+            visibility: visible;
+            transform: scale(1);
+            -webkit-transition: all .5s;
+            transition: all .5s;
+        }
+
+        .sale-up-content {
+            top: 100px;
+            width: 700px;
+        }
+
+        .c-4 {
+            flex: 0 0 30.33333%;
+            max-width: 60%;
+            display: none;
+        }
+
+        .navba-menu{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .navba-list-menu {
+            display: flex;
+            width: 650px;
+            height: 175px;
+         
+        }
+
+        .list-menu-img img {
+            width: 175px;
+            height: 145px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-left: 12px;
+            padding-top: 0px;
+        }
+        .list-money {
+            font-size: 2.5rem;
+            font-weight: 600;
+            color: var(--primary-color);
+            margin-top: 20px;
+        }
+
+        .list-menu-nav {
+            line-height: 30px;
+            margin-left: 30px;
+            font-size: 2rem;
+        }
+
+        .list-h1 {
+            display: flex;
+            font-size: 2.5rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        .footer-all {
+            position: relative;
+            top: 30px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 380px;
+            margin-top: 20px;
+            background-color: var(--green--color);
+        }
+
+        .col-3 {
+            flex: 0 0 25%;
+            max-width: 20%;
+            margin-left: 30px;
+        }
+
+        .footer-end {
+            width: 100%;
+            margin-top: 35px;
+           
+        }
+
+        .footer-img img {
+            width: 130px;
+            height: 30px;
+        }
+
+        .comment::before {
+            content: "";
+            width: 100%;
+            height: 1px;
+            background-color: #ccc;
+            position: absolute;
+            top: 320px;
+        }
+
+        .footer-phone i {
+            padding-right: 0px;
+            color: var(--gold--color);
+            margin-right: 5px;
+        }
+
+        .header .icon-menu > .icon-information > .sub-icon {
+            opacity: 1;
+            visibility: visible;
+            display: none;
+            z-index: 2 ;
+        }
 }
     
 @media (max-width:46.185em){
+    
     #aa{
         display: flex;
     }
@@ -65,7 +420,7 @@
         position: fixed;
         display: none;
         width: 270px;
-        height: 345px;
+        height: 465px;
         top: 0;
         right: 0;
         border: 3px solid   var(--primary-color);
@@ -399,8 +754,15 @@
         margin-top: 40px;
         background-color: var(--green--color);
     }
+    .row {
+        display: flex;
+        padding: 20px 5px 0px 5px;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
 
-    .row{
+    .raw{
         display: block;
         padding: 20px 5px 0px 5px;
 
@@ -465,20 +827,141 @@
         height: 1px;
         background-color: #ccc;
         position: absolute;
-        top: 935px;
+        top: 913px;
+    }
+
+    /* list menu */
+
+    .c-4 {
+        flex: 0 0 30.33333%;
+        max-width: 100%;
+    }
+
+    .organic-list-iq {
+        position: relative;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 15px;
+
+    }
+
+    .img-organic {
+        width: 350px;
+        height: 400px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        margin-left: 10px;
+        margin-bottom: 30px;
+
+      
+    }
+
+    .organic h3 {
+      
+        font-size: 2.5rem;
+    }
+    .organic {
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .naturally h1 {
+        font-size: 5rem;
+    }
+    
+    .list-menu-item{
+        width: 350px;
+    }
+
+    .navba-list-menu{
+        width: 355px;
+        margin-right: 0;
+        margin-left: 6px;
+        display: flex;
+        flex-direction: column;
+        height: 412px;
+    }
+
+    .cart {
+        border: 0;
+        width: 100%;
+    }
+
+    .list-menu-nav {
+        line-height: 30px;
+        padding-left: 10px;
+        display: flex;
+        float: left;
+        flex-direction: column;
+        position: relative;
+        left: 0;
+        width: 343px;
+    }
+
+    .list-menu-img img {
+        width: 335px;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0px;
+        padding-top: 10px;
+    }
+    
+
+    .list-menu-item .list-nav-memnu ul{
+        flex-direction: column;
+    }
+
+    .sale-img img {
+        display: flex;
+        justify-content: center;
+        height: 339px;
+        width: 340px;
+        -webkit-transition: all .5s;
+        transition: all .5s;
+        visibility: visible;
+        transform: scale(1);
+        -webkit-transition: all .5s;
+        transition: all .5s;
+    }
+
+    .sale-up-content {
+        width: 340px;
+    }
+
+    .sale-up-content h1 {
+        font-size: 2rem;
+       
+    }
+
+    .sale-img:hover img{
+        width: 350px;
+        border-radius: 5px;
+        transform: scale(1.03);
+        -webkit-transition: all .5s;
+        transition: all .5s;
+    
+    }
+
+    .list-h1 {
+        display: flex;
+        font-size: 2rem;
+        font-weight: 600;
+        margin-top: 10px;
+    }
+    /* boyd-shopping */
+    .tab-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .tab-item button {
+        width: 100%;
     }
 }
 
 
-
-
-/* boyd-shopping */
-.tab-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.tab-item button {
-    width: 100%;
-}
