--- a/auth/login/asset/css/base.css
+++ b/auth/login/asset/css/base.css
@@ -1,75 +1,34 @@
-:root{
-    --gold-color: #fab55d;
-    --facebook-color: #4867aa;
-    --twitter-color: #33CCFF;
-    --google-color: #db4437;
-    --white-color : #ccc;
-    --write-color: #535353;
-}
 
+
+
+
+:root {
+    --background-color :#fff;
+    --tw-color :#33CCFF;
+    --fb-color:#4867aa;
+    --gg-color:#db4437;
+    --black-color:#000;
+    --primary-color:#fab55d;
+}
 
 html{
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #545454;
-    
-}
-
-
-.row{
+    font-family:  Helvetica, Arial, sans-serif;
+    font-size: 62.5%;
+    line-height: 1.6;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -5px;
-    margin-right: -5px;
-    height: 100%;
+    scroll-behavior: smooth;
 }
 
-.col-4{
-    width:  41.6666%;
-    margin: 0 ;
-    position: relative;
+a {
+    text-decoration: none;
 }
 
-.col-6{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 58.3333%;
-    margin: 0 ;
-}
 
-input[type=checkbox] {
-    position: relative;
-      cursor: pointer;
-}
-input[type=checkbox]:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 14px;
-    height: 14px;
-    top: 0px;
-    left: 0;
-    border: 1px solid #555555;
-    border-radius: 3px;
-    background-color: white;
-}
-input[type=checkbox]:checked:after {
-    content: "";
-    display: block;
-    width: 3px;
-    height: 8px;
-    border: solid var(--gold-color);
-    border-width: 0 2px 2px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    position: absolute;
-    top: 2px;
-    left: 6px;
-}
-
+.login-error
+ {
+    color: red;
+    font-size: 1.4rem;
+    font-weight: 400;
+ }
 
 
