--- a/auth/login/asset/css/extra.css
+++ b/auth/login/asset/css/extra.css
@@ -1,182 +1,368 @@
 * {
     margin: 0;
-    box-sizing: inherit;
     padding: 0;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+}
 
+#register {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+}
 
-.header__img{
+.container {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    box-sizing: border-box;
+}
+
+.col-5 {
+    width: 41.66666%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+.col-7 {
+    width: 58.33333%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+.row {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+}
+
+.img-logo {
     background: url(../../../../access/img/bg-auth.png) ;
     background-size: cover;
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
-    left: -80%;
+    left: 0;
+}
+
+.login-up {
+    position: relative;
+    top: 0;left: 0;right: 0;bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-up--box {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
-
-.footer__contract{
-    /* max-width: 500px; */
+.box-container {
+    background-color: #fff;
     position: absolute;
-    left: 8%;
-    top: 1%;
-    bottom: 1%;
-    width: 67%;
-    background: #fff;
-    padding: 30px;
-    border-radius: 15px;
-}
-.footer__food{
-    /* max-width: 500px; */
-    width: 100%;
-    padding: 18px 0;
-    
-}
-/* Logo */
-.logo__food{
-    display: flex;
-    justify-content: center;
-    font-size: 2rem;
-   font-weight: 800;
-}
-.logo__food a{
-    color: #000;
-    text-decoration: none;
+    width: 380px;
+    height: 90%;
+    border-radius: 10px;
 }
 
-.sign__food{
+.container-content {
+    padding: 15px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     display: flex;
+    flex-direction: column;
+
+}
+
+.login-up__text {
+    display: inline-flex;
+    flex-direction: column;
     justify-content: center;
-    line-height: 30px;
-    color: var(--gold-color);
-    font-size: 1.2rem;
+    align-items: center;
+    margin: -12px;
+
+}
+
+.login-up__text h1 {
+    font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: 0.05em;
+    color: var(--primary-color);
+}
+
+.login-up__text p {
+    font-size: 1.6rem;
     font-weight: 600;
+    letter-spacing: 0.05em;
+    color: rgba(0, 0, 0, 0.9);
 }
-/* emai */
-.commemt__emai{
-    float: left;
-    padding: 20px 0px 0px;
-    width: 100%;
-    min-width: 100px;
+
+
+
+.forms-register h6  {
+    font-size: 1.4rem;
+    line-height: 24px;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.9);
+    letter-spacing: 0.05em;
 }
-.commemt__emai .email__from{
-    float: left;
+
+
+
+.form-input {
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+
+}
+
+.form-input i {
+    padding: 15px;
+    color: #fff;
+    font-size: 1.4rem;
+    background-color: var(--primary-color);
+}
+
+.form-input input{
+    padding: 0.8rem;
+    border: transparent;
+    outline: none;
     width: 100%;
-    font-size: 0.8rem;
-    padding: 12px
+}
+.enter button{
+    width: 100%;
+    padding: 10px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    color: white;
+    cursor: pointer;
+    margin: 1rem 0 0.5rem auto;
+}
+
+.accept-register {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.accept-register span {
+    font-size: 1.4rem;  
+    color: rgba(0, 0, 0, 0.6);
+    letter-spacing: 0.05em;
+    font-weight: 400;
+
+}
+
+.accept-register span a {
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+/* col-7 */
+
+.box-text {
+    position: relative;
+    top: 0;right: 0;left: 0;bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-body {
+    cursor: default;
+    position: absolute;
+    top: -20%;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    margin: auto;
+    display: block;
+    text-align: center;
+}
+
+
+.box-body span {
+    position: relative;
+    top: 20px;  
+    font-family: 'Pacifico', cursive;
+    display: inline-block;
+    -webkit-animation: bounce .6s ease-in-out infinite alternate;
+    font-size: 6rem;
+    color: var(--primary-color);
+    text-shadow:0 1px 0 #ccc ,
+                0 2px 0 #ccc ,
+                0 3px 0 #ccc ,
+                0 4px 0 #ccc ,
+                0 5px 0 #ccc ,
+                0 6px 0 transparent ,
+                0 7px 0 transparent ,
+                0 8px 0 transparent ,
+                0 9px 0 transparent ,
+                0 10px 0 rgba(0, 0, 0, 0.4);
+}
+
+.box-body span:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+}
+.box-body span:nth-child(3) {
+    -webkit-animation-delay: 0.2s;
+}
+.box-body span:nth-child(4) {
+    -webkit-animation-delay: 0.3s;
+}
+.box-body span:nth-child(5) {
+    -webkit-animation-delay: 0.4s;
+}
+.box-body span:nth-child(6) {
+    -webkit-animation-delay: 0.5s;
+}
+.box-body span:nth-child(7) {
+    -webkit-animation-delay: 0.6s;
+}
+.box-body span:nth-child(8) {
+    -webkit-animation-delay: 0.7s;
+}
+.box-body span:nth-child(9) {
+    -webkit-animation-delay: 0.8s;
+}
+.box-body span:nth-child(10) {
+    -webkit-animation-delay: 0.9s;
+}
+.box-body span:nth-child(11) {
+    -webkit-animation-delay: 1s;
+}
+.box-body span:nth-child(12) {
+    -webkit-animation-delay: 1.1s;
+}
+.box-body span:nth-child(13) {
+    -webkit-animation-delay: 1.2s;
+}
+
+@-webkit-keyframes bounce {
+    100% {
+        top: -20px;
+        text-shadow:0 1px 0 #ccc ,
+                    0 2px 0 #ccc ,
+                    0 3px 0 #ccc ,
+                    0 4px 0 #ccc ,
+                    0 5px 0 #ccc ,
+                    0 6px 0 #ccc ,
+                    0 7px 0 #ccc ,
+                    0 8px 0 #ccc ,
+                    0 9px 0 #ccc ,
+                    0 50px 25px rgba(0, 0, 0, 0.2)
+    }
+}
+
+
+
+.box-body .changes-color-text {
+    color: black;
+}
+
+.box-body--text {
     
 }
 
-.emai__login{
-    display: flex;
-}
-
-.email__from{
-    font-size: 15px;
-    outline: none;
-    color: #535353;
-    border-radius: 0 3px 3px 0;
-    border: 1px solid #dbdbdb;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 6%);
-}
-
-.emai__login i{
-    left: 0;
-    width: 50px;
-    height: 43px;
-    line-height: 45px;
-    margin-left: 0px;
+.box-body--text p {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    letter-spacing: 0.02em;
     text-align: center;
-    background: #fab55d;
-    color: #fff;
-    border-radius: 3px 0 0 3px;
-    font-size: 1rem;
-}
-/* password */
-
- .login__pass{
-    display: flex;
- }
-.commemt__password{
-    float: left;
-    padding: 20px 0 0;
-    width: 100%;
-    min-width: 100px;
+    font-family: 'Pacifico', cursive;
+    margin: 30px 85px;
 }
 
-.commemt__password .password__from{
-    float: left;
-    font-size: 0.8rem;
-    width: 100%;
-    padding: 12px;
-}
-.password__from{
-    font-size: 15px;
-    outline: none;
-    color: #535353;
-    border-radius: 0 3px 3px 0;
-    border: 1px solid #dbdbdb;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 6%);
-}
-.login__pass i{
-    width: 50px;
-    left: 0;
-    height: 44px;
-    line-height: 45px;
-    margin-left: 0px;
-    text-align: center;
-    background: #fab55d;
-    color: #fff;
-    border-radius: 3px 0 0 3px ;
-    font-size: 1rem;
-}
-
-/* remember and forgot */
-.remember__to-food{
-    float: left;
-    display: flex;
-    width: 100%;
+/* login */
+.remember-forgot {
     display: flex;
     justify-content: space-between;
-    font-size: 0.8rem;
-    margin-top: 23px;
+    padding: 1rem 0.1rem;
 }
 
-
-
-.remember__check-kout{
-    margin-left: 5px;
+.remember {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    
 }
 
-.forgot__to-word{
+.remember span {
+    font-size: 1.4rem;
+    font-weight: 100;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.forms-login h6  {
+    font-size: 1.4rem;
+    line-height: 24px;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.9);
+    letter-spacing: 0.05em;
+}
+
+.forms-login {
+    margin-top: 25px;
+}
+
+.forgot  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.forgot a {
+    font-size: 1.4rem;
+    font-weight: 100;
     text-decoration: none;
-    color: var(--gold-color);
-
+    color: var(--primary-color);
 }
 
-
-/* nút login */
-
-
-.login-btn{
-    width: 100%;
-    margin-top: 20px;
-    background: var(--gold-color);
-    color: #fff;
-    height: 7%;
-    border: none;
-    font-size: 1rem;
-    font-weight: bold;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-/* or login width */
-
-.or__will{
+.will-changes {
     position: relative;
     display: flex;
     background: #fff;
@@ -185,17 +371,18 @@
     margin-left: 91px;
     margin-top: 27px;
 }
-.or__will p{
+
+.will-changes p {
     background: #fff;
     z-index: 1;
     width: 70%;
     margin-left: 26px;
-    font-size: 0.8rem;
+    font-size: 1.4rem;
     display: flex;
     justify-content: center;
 }
 
-.or__will::before {
+.will-changes::before {
     content: "";
     position: absolute;
     top: 52%;
@@ -206,106 +393,51 @@
     background: #23396726;
 }
 
-/* Facebook and Twitter Google*/
-.facebook__t_gg{
+.changes-btn {
     display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    width: 94%;
-    font-size: 0.8rem;
-}
-.facebook__t_gg a{
-    text-decoration: none;
-}
-.facebook__btn-icon{
-    background: var(--facebook-color);
-    border-radius: 5px;
-    padding: 5px 14px 5px 14px;
-}
-
-.facebook-icon{
-   color: #fff;
-}
-
-.facebook__btn{
-    color: #fff
-}
-
-.twitter__btn-icon{
-    background: var(--twitter-color);
-    border-radius: 5px;
-    padding: 5px 14px 5px 14px;
-}
-
-.twitter-icon{
-    color: #fff;
-}
-
-.Twitter__btn{
-    color: #fff;
-}
-
-.google__btn-icon{
-    background: var(--google-color);
-    border-radius: 5px;
-    padding: 5px 14px 5px 14px;
-}
-
-.google-icon{
-    color: #fff;
-}
-
-.google__btn{
-    color: #fff;
-}
-
-/* register */
-.link__register{
-    display: flex;
-    justify-content: center;
-    margin-top: 35px;
-    font-size: 0.8rem;
-}
-
-.link__register a{
-    text-decoration: none;
-    padding-left: 5px;
-    color: var(--gold-color);
-   
-}
-
-
-/* Welcom to food */
-.content{
-    width: 100%;
-    max-width: 500px;
-    margin: 280px 70px;
-}
-.welcome__food{
-    color: #000;
-    display: flex;
-    justify-content: center;
-    font-size: 2.1rem;
-    font-weight: 900;
-    letter-spacing: 13px;
-}
-.yellow{
-    color: var(--gold-color);
-}
-.content-p{
-    text-align: right;
-    margin-left: 21px;
-    line-height: 28px;
-}
-
-.password__report{
-    color: red;
-    
-    font-size: 0.8rem
-}
-
-.container-content {
-    display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    margin: 1.5rem 0;
 }
+
+.facebook {
+    display: block;
+    background-color: var(--fb-color);
+    padding: 0.8rem 1rem;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    color: white;
+}
+
+.facebook span {
+    color: white;
+}
+
+.twitter {
+    display: block;
+    background-color: var(--tw-color);
+    padding: 0.8rem 1rem;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    color: white;
+}
+
+.twitter span {
+    color: white;
+}
+
+.google {
+    display: block;
+    background-color: var(--gg-color);
+    padding: 0.8rem 1rem;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    color: white;
+}
+
+.google span {
+    color: white;
+}
+
+
+
