--- a/access/header/css/basse.css
+++ b/access/header/css/basse.css
@@ -32,10 +32,7 @@ a {
     color: black;
 }
 
-.active {
-    background-color: var(--primary-color);
-    border-radius: 5px;
-}
+
 
 .grid {
     width: 100%;
@@ -52,7 +49,7 @@ a {
 .row {
     display: flex;
     font-size: 1.3rem;
-    padding: 50px 50px 20px 50px;
+    padding: 20px 00px 00px 20px;
     margin-left: 60px;
 }
 
@@ -81,3 +78,13 @@ a {
     transform:  translateX(-35%) translateY(2%) rotate(-90deg);
   }
 
+    /* .scrollbar {
+        background-color: #F5F5F5;
+        float: left;
+        height: 300px;
+        margin-bottom: 25px;
+        margin-left: 22px;
+        margin-top: 40px;
+        width: 65px;
+        overflow-y: scroll;
+    } */
